1.0.0: Fix module table - border-collapse

--- a/core/assets/css/scss/modules/table/_standard.scss
+++ b/core/assets/css/scss/modules/table/_standard.scss
@@ -6,6 +6,7 @@
 	width: 100%;
 	border: 1px solid rgba(0,0,0,0.1);
 	font-size: 14px;
+	border-collapse: collapse;
 
 	td, th, tr {
 		text-align: left;
